[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
futures = "0.3.21"
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
tracing-log = "0.1.3"
log = "0.4.17"
